--- a/css/style.css
+++ b/css/style.css
@@ -1,244 +1,164 @@
-/* noto-sans-georgian-regular - georgian */
-@font-face {
-    font-family: 'Noto Sans Georgian';
-    font-style: normal;
-    font-weight: 400;
-    src: local(''),
-         url('../fonts/noto-sans-georgian-v28-georgian-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/noto-sans-georgian-v28-georgian-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* noto-sans-georgian-500 - georgian */
-  @font-face {
-    font-family: 'Noto Sans Georgian';
-    font-style: normal;
-    font-weight: 500;
-    src: local(''),
-         url('../fonts/noto-sans-georgian-v28-georgian-500.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/noto-sans-georgian-v28-georgian-500.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* noto-sans-georgian-700 - georgian */
-  @font-face {
-    font-family: 'Noto Sans Georgian';
-    font-style: normal;
-    font-weight: 700;
-    src: local(''),
-         url('../fonts/noto-sans-georgian-v28-georgian-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/noto-sans-georgian-v28-georgian-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
-  /* noto-sans-georgian-900 - georgian */
-  @font-face {
-    font-family: 'Noto Sans Georgian';
-    font-style: normal;
-    font-weight: 900;
-    src: local(''),
-         url('../fonts/noto-sans-georgian-v28-georgian-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-         url('../fonts/noto-sans-georgian-v28-georgian-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-  }
+html {
+	box-sizing: border-box;
+}
 
-  
-@font-face {
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
+body {
 	font-family: 'Arial';
-	src: url('Arial-ItalicMT.eot');
-	src: local('Arial Italic'), local('Arial-ItalicMT'),
-		url('Arial-ItalicMT.eot?#iefix') format('embedded-opentype'),
-		url('Arial-ItalicMT.woff') format('woff'),
-		url('Arial-ItalicMT.ttf') format('truetype');
+	font-style: normal;
+	font-size: 16px;
+	line-height: 1.2;
 	font-weight: normal;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Arial Narrow';
-	src: url('ArialNarrow-Bold.eot');
-	src: local('Arial Narrow Bold'), local('ArialNarrow-Bold'),
-		url('ArialNarrow-Bold.eot?#iefix') format('embedded-opentype'),
-		url('ArialNarrow-Bold.woff') format('woff'),
-		url('ArialNarrow-Bold.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Arial';
-	src: url('Arial-BoldItalicMT.eot');
-	src: local('Arial Bold Italic'), local('Arial-BoldItalicMT'),
-		url('Arial-BoldItalicMT.eot?#iefix') format('embedded-opentype'),
-		url('Arial-BoldItalicMT.woff') format('woff'),
-		url('Arial-BoldItalicMT.ttf') format('truetype');
-	font-weight: bold;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Arial Narrow';
-	src: url('ArialNarrow.eot');
-	src: local('Arial Narrow'), local('ArialNarrow'),
-		url('ArialNarrow.eot?#iefix') format('embedded-opentype'),
-		url('ArialNarrow.woff') format('woff'),
-		url('ArialNarrow.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Arial Narrow';
-	src: url('ArialNarrow-Italic.eot');
-	src: local('Arial Narrow Italic'), local('ArialNarrow-Italic'),
-		url('ArialNarrow-Italic.eot?#iefix') format('embedded-opentype'),
-		url('ArialNarrow-Italic.woff') format('woff'),
-		url('ArialNarrow-Italic.ttf') format('truetype');
-	font-weight: normal;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Arial';
-	src: url('ArialMT.eot');
-	src: local('Arial'), local('ArialMT'),
-		url('ArialMT.eot?#iefix') format('embedded-opentype'),
-		url('ArialMT.woff') format('woff'),
-		url('ArialMT.ttf') format('truetype');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Arial';
-	src: url('Arial-BoldMT.eot');
-	src: local('Arial Bold'), local('Arial-BoldMT'),
-		url('Arial-BoldMT.eot?#iefix') format('embedded-opentype'),
-		url('Arial-BoldMT.woff') format('woff'),
-		url('Arial-BoldMT.ttf') format('truetype');
-	font-weight: bold;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Arial';
-	src: url('Arial-Black.eot');
-	src: local('Arial Black'), local('Arial-Black'),
-		url('Arial-Black.eot?#iefix') format('embedded-opentype'),
-		url('Arial-Black.woff') format('woff'),
-		url('Arial-Black.ttf') format('truetype');
-	font-weight: 900;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Arial Narrow';
-	src: url('ArialNarrow-BoldItalic.eot');
-	src: local('Arial Narrow Bold Italic'), local('ArialNarrow-BoldItalic'),
-		url('ArialNarrow-BoldItalic.eot?#iefix') format('embedded-opentype'),
-		url('ArialNarrow-BoldItalic.woff') format('woff'),
-		url('ArialNarrow-BoldItalic.ttf') format('truetype');
-	font-weight: bold;
-	font-style: italic;
+	color: black;
+	text-decoration: none;
 }
 
 
-html{
-    box-sizing: border-box;
-}
-*, *::before, *::after{
-    box-sizing: inherit;
-}
-body{
-    font-family: 'Arial';
-    font-style: normal;
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: normal;
-    color: black;
-}
-
-
-.wrapper{
-    max-width: 1200px;
-    margin: 0 auto;
+.wrapper {
+	max-width: 1200px;
+	margin: 0 auto;
+	margin-left: 240px;
 }
 
 .header {
-    background: url('../img/intro-bg.jpg');
-    background-repeat: no-repeat;
-    background-position: center 0;
-    background-size: cover;
-  }
-
-.header__wrapper{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 55px;
+	background: url('../img/intro-bg.jpg');
+	background-repeat: no-repeat;
+	background-position: center 0;
+	background-size: cover;
 }
 
-.header__list{
-    display: flex;
-    flex-wrap: wrap;
+.header__wrapper {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+	padding-top: 55px;
 }
 
-.header__item{
-    margin-right: 35px;
+.header__list {
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.header__item:first-child{
-    margin-right:22px;
+.header__item {
+	margin-right: 35px;
 }
 
-.header__item:nth-child(2n){
-    margin-right:20px;
+.header__item:first-child {
+	margin-right: 22px;
+
 }
 
-.header__item:nth-child(3n){
-    margin-right:30px;
+.header__item:nth-child(2n) {
+	margin-right: 20px;
 }
 
-.header__item:last-child{
-    margin-right:50px;
+.header__item:nth-child(3n) {
+	margin-right: 30px;
+}
+
+.header__item:last-child {
+	margin-right: 50px;
 }
 
 
-.header__link{
-    font-family: 'Arial';
-font-style: normal;
-font-weight: 400;
-font-size: 15px;
-line-height: 160%;
-color: #CDCDCD;
-text-decoration: none;
+.header__link {
+	font-family: 'Arial';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 160%;
+	color: #CDCDCD;
+	text-decoration: none;
 }
 
-.header__link:hover{
-    opacity: .75;
+.header__link:hover {
+	opacity: .75;
 }
 
-.header__logo-title{
-    font-family: 'Georgia';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 110%;
-text-decoration: none;
-color: #F1CDB3;
+.header__logo-title {
+	font-family: 'Georgia';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 32px;
+	line-height: 110%;
+	text-decoration: none;
+	color: #F1CDB3;
 }
 
-.header__logo-subtitle{
-font-family: 'Arial';
-font-style: normal;
-font-weight: 400;
-font-size: 13px;
-line-height: 15px;
-color: #FFFFFF;}
-
-.header__logo{
-    margin-left:55px;
+.header__logo-subtitle {
+	font-family: 'Arial';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 15px;
+	color: #FFFFFF;
 }
+
+.header__logo {
+	margin-left: 116px;
+	padding-top: 5px;
+}
+
+
 
 
 /*intro styles*/
 
-.intro{
-    height: 100vh;
-    background: url(../img/intro-bg.jpg) no-repeat center;
-    background-size: cover;
+.intro {
+	height: 100vh;
+	background: url(../img/intro-bg.jpg) no-repeat center;
+	background-size: cover;
+	padding-top: 199px;
+	padding-left: 110px;
+}
+
+.intro__title {
+	max-width: 310px;
+	color: #FFFFFF;
+	font-family: 'Georgia';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 44px;
+	line-height: 130%;
+	margin-bottom: 32px;
+	padding-top: 40px;
+}
+
+.intro__subtitle {
+	max-width: 460px;
+	font-family: 'Arial';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 160%;
+	color: #CDCDCD;
+	margin-bottom: 42px;
+	margin-top: 40px;
+	margin-left: 2px;
+
+}
+
+.dog-pic {
+	display: block;
+	background: transparent;
+	position: absolute;
+	-webkit-transition: 0.8s;
+	transition: 0.8s;
+	cursor: pointer;
+	position: absolute;
+	width: 698px;
+	height: 728px;
+	left: calc(50% - 698px/2 + 251px);
+	bottom: 0px;
+}
+
+.dog-pic:hover {
+	-webkit-filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+	filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
 }
