--- a/style2.css
+++ b/style2.css
@@ -435,3 +435,69 @@ html2 {
   background-size: 30px;
   transition: opacity .3s;
 }
+
+
+/* ===================== ELEMENT: MODAL WINDOW===========================*/
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--wrapper-color);
+  z-index: 2;
+}
+
+.message {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  width: 100%;
+  min-height: 30%;
+  padding: 40px 50px 20px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: var(--hover-color);
+  border-radius: 10px;
+}
+
+.icon-close {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  font-size: 32px;
+  cursor: pointer;
+}
+
+.message-text,
+.message-sign {
+  line-height: 1.5;
+  color: #000;
+}
+
+.message-sign {
+  margin-top: 15px;
+  text-align: right;
+}
+
+.message-link {
+  font-weight: 700;
+}
+
+.hidden {
+  display: none;
+}
